Responsive adapted for all principal Google and Apple's devices, parallax problems solved on Firefox

--- a/css/abika-style.css
+++ b/css/abika-style.css
@@ -22,6 +22,9 @@
   z-index: -2;
 }
 /* --------------------------------------- */
+.font-weight-bold {
+  font-size: 2em;
+}
 .body {
   font-family: 'Roboto', sans-serif;
 }
@@ -78,11 +81,12 @@
   font-size: .8em;
 }
 .homepage {
+  height: 50vh;
+  top: -10%;
   background: url(../img/01.png);
   background-size: auto 100%;
   background-repeat: no-repeat;
   color: white;
-  top: -11%;
   text-align: center;
   padding: 10% 0 14% 0;
 }
@@ -91,21 +95,17 @@
   background-size: auto 100%;
   background-repeat: no-repeat;
   height: 60vh;
-  margin-top: -15vh;
-  margin-bottom: -15vh;
-  z-index: -1;
+  margin-top: -30vh;
+  margin-bottom: -30vh;
 }
 .middlepage-text {
   position: relative;
-  transform: translateY(-100%);
   color: white;
-  padding: 7% 10 7% 0;
 }
 .floating {
   color: #244466;
   background: white;
   text-align: center;
-  transform: translateY(-50%);
 }
 .mobile-section {
   top: 50%;
@@ -114,12 +114,12 @@
 .under {
   color: #244466;
   background: #f7ca69;
-  margin-top: -8%;
+  margin-top: 10%;
 }
 .yellow {
   background: #f7ca69;
   color: #244466;
-  z-index: -1;
+  margin-top: -6%;
 }
 .btn-blue {
   background: #244466;
@@ -130,7 +130,6 @@
   width: 100%;
   background: #f7ca69;
   position: relative;
-  z-index: 1;
 }
 .grey-path {
   width: 100%;
@@ -146,13 +145,11 @@
   margin-top: -12em;
   margin-bottom: -5%;
   position: relative;
-  z-index: 2;
 }
 .hand-splash-img {
   width: 90%;
   margin-bottom: -2.5em;
   position: relative;
-  z-index: 0;
 }
 .bg-white2 {
   background: #efefef;
@@ -172,18 +169,54 @@
   transform:translateY(50%);
   width: 10em;
   position: relative;
-  z-index: 1;
 }
 .preventivi {
-  transform:translateY(-8%);
+  margin-top: -27%;
+  margin-bottom: -30%;
   position: relative;
+}
+.z-2 {
+  position: relative;
+  z-index: -2;
+}
+.z-1 {
+  position: relative;
+  z-index: -1;
+}
+.z0 {
+  position: relative;
+  z-index: 0;
+}
+.z1 {
+  position: relative;
+  z-index: 1;
+}
+.z2 {
+  position: relative;
+  z-index: 2;
 }
 /* Responsive for Laptop, Tablet and Desktop */
 html {
   font-size: 12px;
 }
 .display-3 {
-  font-size: 3em;
+  font-size: 2.8em;
+}
+@media screen and (min-width: 375px) {
+  .floating {
+    transform: translateY(-35%);
+  }
+  .under {
+    margin-top: -20%;
+  }
+  .middlepage {
+    margin-top: -25vh;
+    margin-bottom: -25vh;
+  }
+  .middlepage-text {
+    padding: 0 7% 0 7%;
+    transform: translateY(-25%);
+  }
 }
 @media screen and (min-width: 576px) {
   html {
@@ -199,6 +232,12 @@ html {
 @media screen and (min-width: 768px) {
   html {
     font-size: .8em !important;
+  }
+  .homepage {
+    height: 82vh;
+  }
+  .floating {
+    transform: translateY(-50%);
   }
   .display-3 {
     font-size: 4em;
@@ -218,6 +257,47 @@ html {
   .web-section {
     margin-top: -15%;
   }
+  .under {
+    margin-top: -8%;
+  }
+  .middlepage {
+    height: 60vh;
+    margin-top: -15vh;
+    margin-bottom: -15vh;
+  }
+  .middlepage-text {
+    padding: 7% 10 7% 0;
+    transform: translateY(-50%);
+  }
+  .preventivi {
+    margin-top: 0;
+    margin-bottom: 0;
+    transform: translateY(-10%);
+  }
+}
+/* iPad */
+@media screen and (min-width: 768px) and (min-height: 1024px) {
+  .homepage {
+    height: 50vh;
+    top: -15%;
+    background-size: auto 100%;
+  }
+  .hand-splash-img {
+    width: 100%;
+    top: 14%;
+  }
+  .under {
+    margin-top: -20%;
+  }
+  .middlepage {
+    background-size: auto 100%;
+    height: 60vh;
+    margin-top: -25vh;
+    margin-bottom: -25vh;
+  }
+  .middlepage-text {
+    transform: translateY(-50%);
+  }
 }
 @media screen and (min-width: 992px) {
   .hand-splash-img {
@@ -232,6 +312,32 @@ html {
     margin-top: -7%;
   }
 }
+/* iPad Pro */
+@media screen and (min-width: 1024px) and (min-height: 1366px) {
+  .homepage {
+    height: 50vh;
+    top: -20%;
+  }
+  .under {
+    margin-top: -12%;
+  }
+  .yellow {
+    margin-top: -20%;
+  }
+  .hand-splash-img {
+    width: 100%;
+    top: -13%;
+  }
+  .middlepage {
+    background-size: auto 100%;
+    height: 60vh;
+    margin-top: -25vh;
+    margin-bottom: -25vh;
+  }
+  .middlepage-text {
+    transform: translateY(-50%);
+  }
+}
 @media screen and (min-width: 1400px) {
   html {
     font-size: 1em !important;
@@ -239,6 +345,9 @@ html {
   .desktop-img {
     margin-top: -35%;
     margin-bottom: 0;
+  }
+  .middlepage-text {
+    transform: translateY(-100%);
   }
   .hand-splash-img {
     top: -16%;
